# zkdahuaRust

./: Cargo.toml
.claude/: settings.json
dahua/: Cargo.toml
dahua/src/: api.rs  config.rs  launcher.rs  main.rs  plate_listener.rs  plate_service.rs  sdk.rs
parking-service/: Cargo.toml  README.md  config.toml
parking-service/src/: api.rs  callbacks.rs  camera_manager.rs  config.rs  dahua_camera_manager.rs  dahua_plate_listener.rs  dahua_sdk.rs  main.rs  plate_service.rs  sdk.rs
src/: api.rs  camera_manager.rs  config.rs  main.rs  plate_listener.rs  plate_service.rs  sdk.rs
