[package]
name = "parking-service"
version = "1.0.0"
edition = "2021"
description = "ZKTeco ALPR SDK Parking Service"

[[bin]]
name = "parking-service"
path = "src/main.rs"

[dependencies]
windows-service = "0.7"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
fern = "0.6"
chrono = "0.4"
anyhow = "1"
libloading = "0.8"
once_cell = "1"
digest_auth = "0.3"
tokio-stream = "0.1"
windows-sys = { version = "0.52", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Console",
] }
[profile.release]
opt-level = 3
lto = true
strip = true
